testdata/baselines/reference/submodule/conformance/dynamicImportDeferInvalidStandalone.errors.txt
b.ts(1,8): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
b.ts(3,9): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
b.ts(5,17): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
b.ts(7,8): error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?


==== b.ts (4 errors) ====
    import.defer;
           ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    
    (import.defer)("a");
            ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    
    Function(import.defer);
                    ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    
    import.defer
           ~~~~~
!!! error TS17012: 'defer' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?